--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
   },
   "type": "module",
   "dependencies": {
+    "chart.js": "^4.4.3",
     "electron-serve": "^1.1.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-window-state": "^5.0.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "svelte-chartjs": "^3.1.5"
   }
 }
