--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@playwright/test": "^1.28.1",
+    "@poppanator/sveltekit-svg": "^4.2.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
